syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

// CmdId: 4063
// EnetChannelId: 0
// EnetIsReliable: true
message DeleteFriendNotify {
	uint32 target_uid = 14;
}
