syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

import "ChatInfo.proto";

// CmdId: 4991
// EnetChannelId: 0
// EnetIsReliable: true
message PrivateChatNotify {
	ChatInfo chat_info = 1;
}
